--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body id="top">
     <header class="bg-light">
       <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav" role="navigation">
-        <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">Super Folio</a>
+        <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">Melvin BARDIN</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto me-2">
@@ -37,7 +37,7 @@
               <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
               <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
               <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-              <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+              <li class="nav-item"><a class="nav-link" href="#experience">Expérience</a></li>
               <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
           </div>
@@ -98,13 +98,13 @@
           </div>
           
           <div class="col-sm-2">
-            <div class="pb-1">Phone:</div>
+            <div class="pb-1">Telephone:</div>
           </div>
           <div class="col-sm-10">
             <div class="pb-1 fw-bolder">0786859611</div>
           </div>
           <div class="col-sm-2">
-            <div class="pb-1">Address:</div>
+            <div class="pb-1">Addresse:</div>
           </div>
           <div class="col-sm-10">
             <div class="pb-1 fw-bolder">Montpellier, France</div>
@@ -280,7 +280,7 @@
 <div class="section px-3 px-lg-4 pt-5" id="experience">
   <div class="container-narrow">
     <div class="text-center mb-5">
-      <h2 class="marker marker-center">Experience</h2>
+      <h2 class="marker marker-center">Expérience</h2>
     </div>
     <div class="row">
       <div class="col-md-6">
@@ -288,15 +288,16 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">UI/UX Design</h3>
-                <div class="text-muted text-small">Designerr Inc. <small>(2012-2014)</small></div>
+                <h3 class="h5 mb-1">Stage Ingénieur de recherche</h3>
+                <div class="text-muted text-small">LIRMM (equipe ICAR), CNRS (labo CEFE, equipe E3Co) , Montpellier <small>(2022)</small></div>
               </div><img src="images/services/ui-ux.svg" width="48" height="48" alt="ui-ux"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
-          </div>
+            <p>Mon travail se concentre sur l'étude approfondie de l'intelligence artificielle (IA), la génération d'images et la corrélation des différentes métriques de la fluence neuronale sur la Beauté.</p>
+            <p>Plus précisément, mon objectif est d'étudier les différentes métriques de fluences (Sparsité, typicalité statistique, consommation énergétique, etc.) afin de générer un modèle permettant de montrer la corrélation entre la beauté et la fluence neuronale.</p>
+			<p>Python, Deep learning, Machine learning</p>
+		  </div>
         </div>
       </div>
       <div class="col-md-6">
@@ -304,14 +305,15 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">App Development</h3>
-                <div class="text-muted text-small">MakeMyApp LLC. <small>(2015-2018)</small></div>
+                <h3 class="h5 mb-1">Projet Moteur de jeux</h3>
+                <div class="text-muted text-small">Faculté des sciences de Montpellier <small>(2021)</small></div>
               </div><img src="images/services/app-development.svg" width="48" height="48" alt="app development"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            <p>Réalisation d'un moteur de jeux </p>
+			<!--<div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-fluid mt-2" src="images/avatar.jpg" width="400" height="400" alt="Walter Patterson"/></div>-->
+			<p>C++, Qt Opengl, glsl</p>
           </div>
         </div>
       </div>
@@ -320,14 +322,14 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">Web Design</h3>
-                <div class="text-muted text-small">Webbie LLC. <small>(2018-2020)</small></div>
+                <h3 class="h5 mb-1">Stage Data Analyst</h3>
+                <div class="text-muted text-small">Emvista, Montpellier <small>(2021)</small></div>
               </div><img src="images/services/web-design.svg" width="48" height="48" alt="web design"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            <p>Exploration des processus métiers dans les e-mails.</p>
+            <p>Java, NLP, Process Mining (ProM)</p>
           </div>
         </div>
       </div>
@@ -336,14 +338,29 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">Full Stack Development</h3>
-                <div class="text-muted text-small">Coder Inc. <small>(2020-2021)</small></div>
+                <h3 class="h5 mb-1">Projet Data Analyst</h3>
+                <div class="text-muted text-small">Faculté des sciences de Montpellier <small>(2021)</small></div>
               </div><img src="images/services/full-stack.svg" width="48" height="48" alt="full stack"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            <p>Pallier aux problèmes des datasets non équilibré, utilisation des GAN(generative Adversarial Network) and LSTM Text generator,</p>
+            <p>Python, Deep Learning (TensorFlow, Keras)</p>
+          </div>
+        </div>
+      </div>
+	  <div class="col-md-6">
+        <div class="card mb-3" data-aos="fade-right" data-aos-delay="500">
+          <div class="card-header px-3 py-2">
+            <div class="d-flex justify-content-between">
+              <div>
+                <h3 class="h5 mb-1"> Stage Developpeur Application mobile et web </h3>
+                <div class="text-muted text-small">Vehizen <small>(2020)</small></div>
+              </div><img src="images/services/full-stack.svg" width="48" height="48" alt="full stack"/>
+            </div>
+          </div>
+          <div class="card-body px-3 py-2">
+            <p>Développement d’applications mobiles (Xamarin Android et XamarinForm) et Web (javaScript)</p>
           </div>
         </div>
       </div>
