--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="mt-5">
             <p class="lead text-uppercase mb-1">Bonjour !</p>
             <h1 class="intro-title marker" data-aos="fade-left" data-aos-delay="50">Je suis Melvin BARDIN</h1>
-            <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Computer vision, 3D & deep learning</p>
+            <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Computer vision, programmation 3D & deep learning</p>
             <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
               <nav role="navigation">
                 <ul class="nav justify-content-left">
@@ -64,6 +64,7 @@
                   <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/templateflip" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>
                   -->
+				  <li class="nav-item"><a class="nav-link" href="https://www.youtube.com/channel/UCVNCKKyD5iar1hj1zmDoLpg" title="Youtube"><i class="fab fa-youtube"></i><span class="menu-title sr-only">Youtube</span></a></li>
 				  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/melvin-bardin/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
                   
 				  </ul>
@@ -124,23 +125,23 @@
 <div class="section px-3 px-lg-4 pt-5" id="services">
   <div class="container-narrow">
     <div class="text-center mb-5">
-      <h2 class="marker marker-center">My Services</h2>
+      <h2 class="marker marker-center">Mes principales compétences</h2>
     </div>
     <div class="text-center">
-      <p class="mx-auto mb-3" style="max-width:600px"> I offer services fit for any website or app. I can quickly maximize timely deliverables for real-time schemas.</p>
+      <!--<p class="mx-auto mb-3" style="max-width:600px"> I offer services fit for any website or app. I can quickly maximize timely deliverables for real-time schemas.</p>-->
     </div>
     <div class="row py-3">
-      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="100"><img class="mb-2" src="images/services/web-design.svg" width="96" height="96" alt="web design"/>
-        <div class="h5">Web Design</div>
+      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="100"><img class="mb-2" src="images/services/ia_icon.png" width="96" height="96" alt="Deep Learning"/>
+        <div class="h5">Deep Learning</div>
       </div>
-      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="200"><img class="mb-2" src="images/services/graphic-design.svg" width="96" height="96" alt="graphic design"/>
-        <div class="h5">Graphic Design</div>
+      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="200"><img class="mb-2" src="images/services/computervision_icon.png" width="96" height="96" alt="Computer Vision"/>
+        <div class="h5">Computer Vision</div>
       </div>
-      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="300"><img class="mb-2" src="images/services/ui-ux.svg" width="96" height="96" alt="ui-ux"/>
-        <div class="h5">UI/UX</div>
+      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="300"><img class="mb-2" src="images/services/3d_icon.png" width="96" height="96" alt="Programmation 3D"/>
+        <div class="h5">Programmation 3D</div>
       </div>
-      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="400"><img class="mb-2" src="images/services/app-development.svg" width="96" height="96" alt="app development"/>
-        <div class="h5">App Development</div>
+      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="400"><img class="mb-2" src="images/services/piano_icon.png" width="96" height="96" alt="Musique"/>
+        <div class="h5">Musique</div>
       </div>
     </div>
   </div>
@@ -290,7 +291,7 @@
               <div>
                 <h3 class="h5 mb-1">Stage Ingénieur de recherche</h3>
                 <div class="text-muted text-small">LIRMM (equipe ICAR), CNRS (labo CEFE, equipe E3Co) , Montpellier <small>(2022)</small></div>
-              </div><img src="images/services/ui-ux.svg" width="48" height="48" alt="ui-ux"/>
+              </div><img src="images/services/ia_icon.png" width="48" height="48" alt="ia"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
@@ -307,12 +308,13 @@
               <div>
                 <h3 class="h5 mb-1">Projet Moteur de jeux</h3>
                 <div class="text-muted text-small">Faculté des sciences de Montpellier <small>(2021)</small></div>
-              </div><img src="images/services/app-development.svg" width="48" height="48" alt="app development"/>
+              </div><img src="images/services/3d_icon.png" width="48" height="48" alt="3d"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
             <p>Réalisation d'un moteur de jeux </p>
 			<!--<div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-fluid mt-2" src="images/avatar.jpg" width="400" height="400" alt="Walter Patterson"/></div>-->
+			<iframe width="460" height="259" src="https://www.youtube.com/embed/InkqABgvRUg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<p>C++, Qt Opengl, glsl</p>
           </div>
         </div>
@@ -324,7 +326,7 @@
               <div>
                 <h3 class="h5 mb-1">Stage Data Analyst</h3>
                 <div class="text-muted text-small">Emvista, Montpellier <small>(2021)</small></div>
-              </div><img src="images/services/web-design.svg" width="48" height="48" alt="web design"/>
+              </div><img src="images/services/ia_icon.png" width="48" height="48" alt="ia"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
@@ -340,7 +342,7 @@
               <div>
                 <h3 class="h5 mb-1">Projet Data Analyst</h3>
                 <div class="text-muted text-small">Faculté des sciences de Montpellier <small>(2021)</small></div>
-              </div><img src="images/services/full-stack.svg" width="48" height="48" alt="full stack"/>
+              </div><img src="images/services/ia_icon.png" width="48" height="48" alt="ia"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
@@ -356,7 +358,7 @@
               <div>
                 <h3 class="h5 mb-1"> Stage Developpeur Application mobile et web </h3>
                 <div class="text-muted text-small">Vehizen <small>(2020)</small></div>
-              </div><img src="images/services/full-stack.svg" width="48" height="48" alt="full stack"/>
+              </div><img src="images/services/app-development.svg" width="48" height="48" alt="mobile"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
@@ -473,16 +475,15 @@
 <footer class="pt-4 pb-4 text-center bg-light">
   <div class="container">
     <div class="my-3">
-      <div class="h4">Walter Patterson</div>
-      <p>Web Developer & Mobile Application Developer</p>
+      <div class="h4">Melvin BARDIN</div>
+      <p>Computer vision, programmation 3D & deep learning</p>
       <div class="social-nav">
         <nav role="navigation">
           <ul class="nav justify-content-center">
-            <li class="nav-item"><a class="nav-link" href="https://twitter.com/templateflip" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/templateflip" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>
+
+            <li class="nav-item"><a class="nav-link" href="https://www.youtube.com/channel/UCVNCKKyD5iar1hj1zmDoLpg" title="Youtube"><i class="fab fa-youtube"></i><span class="menu-title sr-only">Youtube</span></a></li>
             <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="https://www.behance.net/templateflip" title="Behance"><i class="fab fa-behance"></i><span class="menu-title sr-only">Behance</span></a></li>
+            
           </ul>
         </nav>
       </div>
