--- a/index.html
+++ b/index.html
@@ -372,45 +372,28 @@
 <div class="section px-3 px-lg-4 pt-5" id="testimonials">
   <div class="container-narrow">
     <div class="text-center mb-5">
-      <h2 class="marker marker-center">Client Testimonials</h2>
+      <h2 class="marker marker-center">Témoignages</h2>
     </div>
     <div class="row"> 
       <div class="col-md-6 mb-5" data-aos="fade-right" data-aos-delay="100">
-        <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Walter displays exemplary professionalism and is able to take on challenges. He learns quickly and is an asset to any team.</span></div>
+        <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Ses expériences ont toujours été menées avec rigueur ; son encadrement a été facilité grâce à sa grande écoute et à sa rapide compréhension des choses.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
-            <div class="fw-bolder">Aiyana</div>
-            <div class="text-small">CEO / Web Design Company</div>
-          </div><img class="me-md-3 rounded" src="images/testimonials/client1.jpg" width="96" height="96" alt="client 1"/>
+            <div class="fw-bolder">Cédric Lopez</div>
+            <div class="text-small">Emvista / Directeur de recherche</div>
+          </div><img class="me-md-3 rounded" src="images/testimonials/cedric_lopez.png" width="96" height="96" alt="cedric lopez"/>
         </div>
       </div>
       <div class="col-md-6 mb-5" data-aos="fade-left" data-aos-delay="300">
-        <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Walter displays exemplary professionalism and is able to take on challenges. He learns quickly and is an asset to any team.</span></div>
+        <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Melvin a été un étudiant très sérieux et très travailleur qui n’a pas hésité à s’investir dans des technologies qu’il ne connaissait pas.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
-            <div class="fw-bolder">Alexander</div>
-            <div class="text-small">CEO / Web Design Company</div>
-          </div><img class="me-md-3 rounded" src="images/testimonials/client2.jpg" width="96" height="96" alt="client 1"/>
+            <div class="fw-bolder">Pascal Poncelet</div>
+            <div class="text-small">LIRMM / Professeur des universités</div>
+          </div><img class="me-md-3 rounded" src="images/testimonials/pascal_poncelet.png" width="96" height="96" alt="pascal poncelet"/>
         </div>
       </div>
-      <div class="col-md-6 mb-5" data-aos="fade-right" data-aos-delay="200">
-        <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Walter is a great co-worker and problem solver. He is quick to extend his helping hand and makes a good team player.</span></div>
-        <div class="d-flex justify-content-end align-items-end">
-          <div class="text-end me-2">
-            <div class="fw-bolder">Ariya</div>
-            <div class="text-small">Web Developer</div>
-          </div><img class="me-md-3 rounded" src="images/testimonials/client3.jpg" width="96" height="96" alt="client 1"/>
-        </div>
-      </div>
-      <div class="col-md-6 mb-5" data-aos="fade-left" data-aos-delay="400">
-        <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Walter is a great co-worker and problem solver. He is quick to extend his helping hand and makes a good team player.</span></div>
-        <div class="d-flex justify-content-end align-items-end">
-          <div class="text-end me-2">
-            <div class="fw-bolder">Braiden</div>
-            <div class="text-small">Web Designer</div>
-          </div><img class="me-md-3 rounded" src="images/testimonials/client4.jpg" width="96" height="96" alt="client 1"/>
-        </div>
-      </div>
+      
     </div>
   </div>
 </div>
