--- a/index.html
+++ b/index.html
@@ -477,6 +477,18 @@
         <!-- Make sure to buy a license for the template before removing the line below. Buy license on https://templateflip.com/ -->Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
     </div>
   </div>
+
+<figure>
+    <figcaption>composition pour une GameJam</figcaption>
+    <audio
+        controls
+        src="/musics/Assets_Sounds_Battle_Theme.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+</figure>	
+	
+	
 </footer></div>
     </div>
     <div id="scrolltop"><a class="btn btn-secondary" href="#top"><span class="icon"><i class="fas fa-angle-up fa-x"></i></span></a></div>
