--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				  </ul>
               </nav>
             </div>
-            <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="#contact">Get In Touch <i class="fas fa-arrow-right"></i></a></div>
+            <!--<div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="#contact">Get In Touch <i class="fas fa-arrow-right"></i></a></div>-->
           </div>
         </div>
       </div>
@@ -191,7 +191,10 @@
 		  <div class="py-1">
             <div class="d-flex text-small fw-bolder"><span class="me-auto">Transfert de Style</span></div>
           </div>
-		  	<div class="py-1">
+		  <div class="py-1">
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Inpainting</span></div>
+          </div>
+		  <div class="py-1">
             <div class="d-flex text-small fw-bolder"><span class="me-auto">OpenCV</span></div>
           </div>
         </div>		
@@ -239,7 +242,7 @@
       </div>
     </div>
   </div>
-</div>
+</div><!--
 <div class="section px-2 px-lg-4 pt-5" id="portfolio">
   <div class="container">
     <div class="text-center mb-5">
@@ -305,14 +308,14 @@
           </figure></a></div>
     </div>
   </div>
-</div>
+</div>-->
 <div class="section px-3 px-lg-4 pt-5" id="experience">
   <div class="container-narrow">
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Expériences</h2>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6" class="deep" class="image">
         <div class="card mb-3" data-aos="fade-right" data-aos-delay="100">
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
@@ -329,7 +332,7 @@
 		  </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6"  class="deep" class="image">
         <div class="card mb-3" data-aos="fade-left" data-aos-delay="300">
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
@@ -407,7 +410,7 @@
           </div>
           <div class="card-body px-3 py-2">
 			<figure>
-			<figcaption>composition pour une GameJam 2021</figcaption>
+			<figcaption>Composition pour une GameJam 2021</figcaption>
 				<audio
 				controls
 				src="musics/Assets_Sounds_Battle_Theme.mp3">
