--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div class="container-narrow">
     <div class="row">
       <div class="col-md-6">
-        <h2 class="h4 my-2">Bonjour, je suis Melvin BARDIN.</h2>
+        <h2 class="h4 my-2">Melvin BARDIN.</h2>
         <p>Actuellement Etudiant en M2 informatique IMAGINA (Images, games et intelligent agents) à la faculté des sciences de Montpellier.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
@@ -150,7 +150,7 @@
 <div class="section px-3 px-lg-4 pt-5" id="skills">
   <div class="container-narrow">
     <div class="text-center mb-5">
-      <h2 class="marker marker-center">My Skills</h2>
+      <h2 class="marker marker-center">Mes principales aptitudes</h2>
     </div>
    <!-- <div class="text-center">
       <p class="mx-auto mb-3" style="max-width:600px">I am a quick learner and specialize in multitude of skills required for Web Application Development and Product Design</p>
