--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@
 			<div class="d-flex text-small fw-bolder"><span class="me-auto">Manipulation de maillages et nuages de points</span></div>
 			</div>
 			<div class="py-1">
+			<div class="d-flex text-small fw-bolder"><span class="me-auto">Raytracing</span></div>
+			</div>
+
+			<div class="py-1">
 			<div class="d-flex text-small fw-bolder"><span class="me-auto">Unity</span></div>
 			</div>
 
