--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 			<!--<img src="images/illustrations/harmonisation.jpg" width="480" height="300" alt="harmonie"/>
 			<div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-fluid mt-2" src="images/avatar.jpg" width="400" height="400" alt="Walter Patterson"/></div>-->
 			
-			<p>Python, Qt, Opengl</p>
+			<p>Python, Qt, OpenCV</p>
           </div>
         </div>
       </div>
