--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Mon travail se concentre sur l'étude approfondie de l'intelligence artificielle et la corrélation des différentes métriques de la fluence neuronale sur la Beauté.</p>
-            <p>Plus précisément, mon objectif est d'étudier les différentes métriques de fluences (Sparsité, typicalité statistique, consommation énergétique, etc.) afin de générer un modèle permettant de montrer la corrélation entre la beauté et la fluence neuronale.</p>
-			<p>Python, Deep learning, Machine learning</p>
+            <p>Mon travail s'est concentré sur l'étude approfondie des réseaux de neurones convolutifs et la corrélation des différentes métriques de la fluence neuronale (sensation de facilité dans le cerveau) sur la beauté.</p>
+            <p>Plus précisément, mon objectif a été d'étudier les différentes métriques de fluences (Sparsité, typicalité statistique, consommation énergétique, etc.) afin de générer un modèle permettant de montrer la corrélation entre la beauté et la fluence neuronale.</p>
+			<p>Python, Deep learning, Machine learning, Neuroscience</p>
 		  </div>
         </div>
       </div>
