--- a/index.html
+++ b/index.html
@@ -496,8 +496,9 @@ comportement le démarque de bon nombre d’étudiants en informatique avec lesq
 j’ai pu travailler précédemment.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
+		  
             <div class="fw-bolder">Julien Renoult</div>
-            <div class="text-small">CNRS / Chercheur</div>
+            <div class="text-small">CNRS / responsable de l’équipe de recherche E3Co</div>
           </div><img class="me-md-3 rounded" src="images/testimonials/julien_2.png" width="96" height="96" alt="nicolas dibot"/>
         </div>
       </div>
