--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ j’ai pu travailler précédemment.</span></div>
           <div class="text-end me-2">
 		  
             <div class="fw-bolder">Julien Renoult</div>
-            <div class="text-small">CNRS / responsable de l’équipe de recherche E3Co</div>
+            <div class="text-small">CNRS / Responsable de l’équipe de recherche E3Co</div>
           </div><img class="me-md-3 rounded" src="images/testimonials/julien_2.png" width="96" height="96" alt="nicolas dibot"/>
         </div>
       </div>
