--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h4 my-2">Melvin BARDIN.</h2>
-        <p>Actuellement Etudiant en M2 informatique IMAGINA (Images, games et intelligent agents) à la faculté des sciences de Montpellier.</p>
+        <p>Nouvellement diplômé du Master informatique IMAGINA (Images, games and intelligents agents) à la faculté des sciences de Montpellier, je travaille en tant en Ingénieur R&D à Terakalis.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
             <div class="pb-1">Age:</div>
