update experience crns

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h4 my-2">Melvin BARDIN.</h2>
-        <p>Nouvellement diplômé du Master informatique IMAGINA (Images, games and intelligents agents) à la faculté des sciences de Montpellier, je travaille en tant en Ingénieur R&D à Terakalis.</p>
+        <p>Nouvellement diplômé du Master informatique IMAGINA (Images, games and intelligents agents) à la faculté des sciences de Montpellier, je travaille en tant qu'Ingénieur R&D à Terakalis.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
             <div class="pb-1">Age:</div>
@@ -330,9 +330,9 @@
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Mon travail s'est concentré sur l'étude approfondie des réseaux de neurones convolutifs et la corrélation des différentes métriques de la fluence neuronale (sensation de facilité dans le cerveau) sur la beauté.</p>
-            <p>Plus précisément, mon objectif a été d'étudier les différentes métriques de fluences (Sparsité, typicalité statistique, consommation énergétique, etc.) afin de générer un modèle permettant de montrer la corrélation entre la beauté et la fluence neuronale.</p>
-			<p>Python, Deep learning, Machine learning, Neuroscience</p>
+            <p>Lors de mon stage de fin d’études, j’ai travaillé en tant qu’ingénieur d’étude, dans le laboratoire CEFE (Centre d’Ecologie Evolutive et Fonctionnelle) en collaboration avec le laboratoire LIRMM (Laboratoire Informatique,Robotique, Micro-électronique de Montpellier).</p>
+    	    <p>Mon objectif a été de créer un modèle de prédiction basé sur le lien entre beauté et fluence neuronale (sensation de facilité dans le cerveau). Nous abordons une vision interactionniste où la base de l’expérience esthétique serait située dans la perception de l’objet par l’individu, dans le cortex visuel. Ce dernier semble être prédisposé à évaluer plus positivement certains motifs ou caractéristiques, influencé par la probabilité des stimuli. Comme l’architecture de celui-ci est très proche des réseaux de neurones convolutifs, nous avons pu créer un modèle de beauté lié à la fluence neuronal.</p>
+	    <p>Python, Deep learning, Machine learning, Neuroscience</p>
 		  </div>
         </div>
       </div>
