--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@ Access-Control-Allow-Origin: https://github.com/Kyrial/myWebsite/tree/main/xml
     <link href="./css/bootstrap.min.css?ver=1.2.0" rel="stylesheet">
     <link href="./css/aos.css?ver=1.2.0" rel="stylesheet">
     <link href="./css/main.css?ver=1.2.0" rel="stylesheet">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js" type="text/javascript"></script>
     <noscript>
       <style type="text/css">
         [data-aos] {
