--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ function createDOMHierarchy() {
 	console.log(json.Temoignages.temoignage[0]);
 	console.log(json.Temoignages.temoignage[0].resume);
 	var i = 1;
-	json.Temoignages.forEach(function(element) {
+	for (var element of json.Temoignages){
 		var side =   'fade-left';
 		if(i%2==0)
 		  side =   'fade-right';
@@ -681,7 +681,7 @@ function createDOMHierarchy() {
 				i*100,
 				side);
 		rowDiv.appendChild(testimonialDiv1);
-		});
+		}
 	
 	});
 
