--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ function createDOMHierarchy() {
 	console.log(json.Temoignages.temoignage[0]);
 	console.log(json.Temoignages.temoignage[0].resume);
 	var i = 1;
-	for (var element of json.Temoignages){
+	for (var element of json.Temoignages.temoignage){
 		var side =   'fade-left';
 		if(i%2==0)
 		  side =   'fade-right';
