--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@ var testimonialDiv1 = createTestimonialDiv(
 // Exemple d'utilisation :
 var hierarchy = createDOMHierarchy();
 var contentDiv = document.getElementById("content");
-//contentDiv.appendChild(hierarchy);
+contentDiv.appendChild(hierarchy);
 
 </script>
 
