--- a/index.html
+++ b/index.html
@@ -662,9 +662,9 @@ function createDOMHierarchy() {
 	console.log(json.Temoignages);
 	//console.log(json.Temoignages.temoignage[0]);
 	//console.log(json.Temoignages.temoignage[0].resume);
-	var i = 1;
+	let i = 1;
 	for (var element of json.Temoignages.temoignage){
-		var side ='fade-left';
+		let side ='fade-left';
 		if(i%2==0){
 		  side = 'fade-right';
 		  }
