--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ function createDOMHierarchy() {
   sectionDiv.id = 'testimonials2';
 
   var containerDiv = document.createElement('div');
-  containerDiv.className = 'container-narrow2';
+  containerDiv.className = 'container-narrow';
 
   var textCenterDiv = document.createElement('div');
   textCenterDiv.className = 'text-center mb-5';
