--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@ j’ai pu travailler précédemment.</span></div>
           </div><img class="me-md-3 rounded" src="images/testimonials/cedric_lopez.png" width="96" height="96" alt="cedric lopez"/>
         </div>
       </div>
-      <div class="col-md-6 mb-5" data-aos="fade-left" data-aos-delay="100">
+      <div class="col-md-6 mb-5" data-aos="fade-left" data-aos-delay="400">
         <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Melvin a été un étudiant très sérieux et très travailleur qui n’a pas hésité à s’investir dans des technologies qu’il ne connaissait pas.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
@@ -664,9 +664,9 @@ function createDOMHierarchy() {
 	//console.log(json.Temoignages.temoignage[0].resume);
 	let i = 1;
 	for (var element of json.Temoignages.temoignage){
-		let side ='fade-left';
+		let side ='fade-right';
 		if(i%2==0){
-		  side = 'fade-right';
+		  side = 'fade-left';
 		  }
 		else{
 			rowDiv = document.createElement('div');
