--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ Access-Control-Allow-Origin: https://github.com/Kyrial/myWebsite/tree/main/xml
 
 
 
-
+<!--
 <div class="section px-3 px-lg-4 pt-5" id="testimonials">
   <div class="container-narrow">
     <div class="text-center mb-5">
@@ -552,7 +552,7 @@ j’ai pu travailler précédemment.</span></div>
       
     </div>
   </div>
-</div>
+</div>-->
 <script>
 
 //var json3 = $.getJSON("./xml/Experience.json");
