--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ function createTestimonialDiv(name, role, imageSrc, quote, years, delay, classSi
 function createDOMHierarchy() {
   var sectionDiv = document.createElement('div');
   sectionDiv.className = 'section px-3 px-lg-4 pt-5';
-  sectionDiv.id = 'testimonials2';
+  sectionDiv.id = 'testimonials';
 
   var containerDiv = document.createElement('div');
   containerDiv.className = 'container-narrow';
