--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@ function createDOMHierarchy() {
 
   var heading = document.createElement('h2');
   heading.className = 'marker marker-center';
-  heading.textContent = 'Témoignages2';
+  heading.textContent = 'Témoignages';
 
   textCenterDiv.appendChild(heading);
   containerDiv.appendChild(textCenterDiv);
