--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <!-- upto 2 directory depth-->
-Access-Control-Allow-Origin: https://github.com/Kyrial/myWebsite/tree/main/xml
 
 <html lang="fr_FR">
   <head>
@@ -807,7 +806,7 @@ contentDiv.appendChild(hierarchy);
     <div id="scrolltop"><a class="btn btn-secondary" href="#top"><span class="icon"><i class="fas fa-angle-up fa-x"></i></span></a></div>
     <script src="./scripts/imagesloaded.pkgd.min.js?ver=1.2.0"></script>
     <script src="./scripts/masonry.pkgd.min.js?ver=1.2.0"></script>
-    <script src="./scripts/BigPicture.min.js?ver=1.2.0"></script>
+    <!--<script src="./scripts/BigPicture.min.js?ver=1.2.0"></script>-->
     <script src="./scripts/purecounter.min.js?ver=1.2.0"></script>
     <script src="./scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
     <script src="./scripts/aos.min.js?ver=1.2.0"></script>
