--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ j’ai pu travailler précédemment.</span></div>
 </div>-->
 <script>
 
-<script src="./scripts/creationDom.js">
+src="./scripts/creationDom.js"
 
 // Exemple d'utilisation :
 var hierarchy = createDOMHierarchy();
