--- a/index.html
+++ b/index.html
@@ -552,9 +552,9 @@ j’ai pu travailler précédemment.</span></div>
     </div>
   </div>
 </div>-->
-<script>
 
-src="./scripts/creationDom.js"
+<script>type="text/javascript" src="./scripts/creationDom.js"</script>
+<script>
 
 // Exemple d'utilisation :
 var hierarchy = createDOMHierarchy();
