--- a/index.html
+++ b/index.html
@@ -556,6 +556,7 @@ j’ai pu travailler précédemment.</span></div>
 <script>type="text/javascript" src="./scripts/creationDom.js"</script>
 <script>
 
+import { createDOMHierarchy } from "./scripts/creationDom.js";
 // Exemple d'utilisation :
 var hierarchy = createDOMHierarchy();
 var contentDiv = document.getElementById("content");
