--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ j’ai pu travailler précédemment.</span></div>
   </div>
 </div>-->
 
-<script>type="text/javascript" src="./scripts/creationDom.js"</script>
+<script>src="./scripts/creationDom.js" type="module"></script>
 <script>
 
 import { createDOMHierarchy } from "./scripts/creationDom.js";
