--- a/index.html
+++ b/index.html
@@ -551,12 +551,22 @@ j’ai pu travailler précédemment.</span></div>
       
     </div>
   </div>
-</div>-->
+  
+  
+  <script src ="./scripts/creationDom.js" type="module"></script>
 
-<script>src="./scripts/creationDom.js" type="module"></script>
 <script>
 
 import { createDOMHierarchy } from "./scripts/creationDom.js";
+  
+  
+  
+</div>-->
+
+<script src="./scripts/creationDom.js" type="text/javascript"></script>
+<script>
+
+
 // Exemple d'utilisation :
 var hierarchy = createDOMHierarchy();
 var contentDiv = document.getElementById("content");
