--- a/index.html
+++ b/index.html
@@ -320,6 +320,22 @@
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Expériences</h2>
     </div>
+	<div class="row">
+      <div class="col-md-6" class="deep" class="image">
+        <div class="card mb-3" data-aos="fade-right" data-aos-delay="100">
+          <div class="card-header px-3 py-2">
+            <div class="d-flex justify-content-between">
+              <div>
+                <h3 class="h5 mb-1">Ingenieur R&D en Informatique Industrielle et traitement d'image</h3>
+                <div class="text-muted text-small">Terakalis , Montpellier <small>(2022 - now)</small></div>
+              </div><img src="images/services/computervision_icon.png" width="48" height="48" alt="ia"/>
+            </div>
+          </div>
+          <div class="card-body px-3 py-2">
+            <p>Tâches variées allant de la résolution algorithmique, à l'UI en passant par la configuration de matériels industriels (moteurs, caméras, etc.), le tout en C++ avec Qt.</p>
+		  </div>
+        </div>
+      </div>
     <div class="row">
       <div class="col-md-6" class="deep" class="image">
         <div class="card mb-3" data-aos="fade-right" data-aos-delay="100">
