--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <div class="d-flex justify-content-between">
               <div>
                 <h3 class="h5 mb-1">Stage de recherche: Utilisation des Réseaux convolutifs pour modéliser le lien entre beauté et fluence neuronale</h3>
-                <div class="text-muted text-small">LIRMM (equipe ICAR), CNRS (labo CEFE, equipe E3Co) , Montpellier <small>(2022)</small></div>
+                <div class="text-muted text-small">LIRMM (équipe ICAR), CNRS (labo CEFE, équipe E3Co) , Montpellier <small>(2022)</small></div>
               </div><img src="images/services/ia_icon.png" width="48" height="48" alt="ia"/>
             </div>
           </div>
@@ -384,7 +384,7 @@
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Création d'une application interactive permettant d'armoniser dynamiquement une image.
+            <p>Création d'une application interactive permettant d'harmoniser dynamiquement une image.
 				(harmonisation Complémentaire, Analogue, Triadique, complémentaire adjacente, Tétradique et monochromatique).
 				
 				Une partie deep learning avec transfert de style.
