--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h4 my-2">Melvin BARDIN.</h2>
-        <p>Nouvellement diplômé du Master informatique IMAGINA (Images, games and intelligents agents) à la faculté des sciences de Montpellier, je travaille en tant qu'Ingénieur R&D à Terakalis.</p>
+        <p>Diplômé du Master informatique IMAGINE (Traitement d'image, 3D, IA, jeux vidéo) à la faculté des sciences de Montpellier, je travaille en tant qu'Ingénieur R&D à Terakalis.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
             <div class="pb-1">Age:</div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">25</div>
+            <div class="pb-1 fw-bolder">26</div>
           </div>
           <div class="col-sm-2">
             <div class="pb-1">Email:</div>
@@ -332,7 +332,17 @@
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Tâches variées allant de la résolution algorithmique, à l'UI en passant par la configuration de matériels industriels (moteurs, caméras, etc.), le tout en C++ avec Qt.</p>
+            
+			<ul>
+			<li> <b>Traitements d’images :</b> Créations d’algorithmes pour la détection et segmentation de
+motifs sur images visibles et térahertz.</li>
+<li><b>BDD :</b> Conception et intégration de bases de données aux logiciels</li>
+<li><b>Robotique :</b> Programmation de robots 6 axes et configuration de moteurs (PID)</li>
+<li><b>Architecte SI :</b> Responsable de l’architecture, du design et de la qualité des logiciels</li>
+<li><b>Déplacements Pro :</b> Mise en service, maintenance, assistance (France, Pays-Bas)</li>
+<li><b>Outils :</b> C++ Qt, MySQL, GitKraken, OpenCV, norme OPC-UA, automates</li>
+			</ul>
+			
 		  </div>
         </div>
       </div>
